<resources>
    <string name="app_name">SmallWorld</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="Facebook">Facebook</string>
    <string name="Weibo">Weibo</string>
    <string name="Twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="Snapchat">Snapchat</string>
    <string name="News">News</string>
    <string name="aaaaa">AAAAA</string>
    <string-array name="titles_tab">
        <item>World</item>
        <item>Economy</item>
        <item>Sport</item>
    </string-array>
</resources>

