<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:text= "@string/News"
                    android:onClick="setContentView"
                    android:background="@drawable/test"
                    android:textAlignment="center"
                    android:gravity="bottom"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:text="@string/Facebook"
                        android:background="@drawable/test"
                        android:textAlignment="center"
                        android:gravity="bottom"/>

                    <TextView
                        android:id="@+id/twitter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:text="@string/Twitter"
                        android:background="@drawable/test"
                        android:textAlignment="center"
                        android:gravity="bottom"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:text="@string/Instagram"
                    android:background="@drawable/test"
                    android:textAlignment="center"
                    android:gravity="bottom"/>

                <TextView
                    android:id="@+id/snapchat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:text="@string/Snapchat"
                    android:background="@drawable/test"
                    android:textAlignment="center"
                    android:gravity="bottom"/>

                <TextView
                    android:id="@+id/weibo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:text="@string/Weibo"
                    android:gravity="bottom"
                    android:background="@drawable/test"
                    android:textAlignment="center" />
            </LinearLayout>




        </LinearLayout>



    </RelativeLayout>
    <ListView
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:id="@+id/lv_sliding_menu"
        android:background="#FFFFFF"
        android:choiceMode="singleChoice"
        android:layout_gravity="start"></ListView>


</android.support.v4.widget.DrawerLayout>
